--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,9 @@
 body {
   background-color: purple;
 }
+h1 {
+  font-size: 124px;
+  font-family: monospace;
+  color: bisque;
+  text-align: center;
+}
