--- a/style/main.css
+++ b/style/main.css
@@ -6,18 +6,32 @@ h1 {
   font-family: monospace;
   color: rgb(29, 38, 15);
   text-align: center;
+  display: block;
+  margin-block-start: 0.32em;
+  margin-block-end: 0.32em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  unicode-bidi: isolate;
 }
 h2 {
   font-size: 61px;
   font-family: monospace;
   color: rgb(29, 38, 15);
   text-align: center;
+  text-decoration: underline;
 }
 h3 {
   font-size: 24pt;
   font-family: Arial;
   text-align: center;
   text-decoration: solid;
+}
+h4 {
+  font-size: 20pt;
+  font-family: Helvetica;
+  text-align: center;
+  text-emphasis: bold;
 }
 p {
   font-family: monospace;
@@ -44,4 +58,13 @@ div {
   padding: 50px;
   margin: 20px;
   border-radius: 15px;
+}
+
+span {
+  display: flex;
+  justify-content: center;
+}
+
+ol {
+  text-decoration: underline;
 }
