--- a/style/main.css
+++ b/style/main.css
@@ -69,6 +69,12 @@ span {
 ol {
   text-decoration: underline;
 }
+.ol2 {
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
+  background-color: cornflowerblue;
+}
 #banner {
   width: 100%;
 }
